classDiagram
    direction TB

    class AbstractDomainObject {
        +Iid iid
        +Key uniqueKey
    }

    class Stakeholder {
        +String name
        +String email
    }

    class Reference {
        +ReferenceCategory category
        +RepositoryId repositoryId
    }

    class Repository {
        +String localPath
        +ProjectId projectId
    }

    class Commit {
        +String sha
        +Signature authorSignature
        +Signature committerSignature
        +String message
        +RepositoryId repositoryId
        +String webUrl
        +Stats stats
        +MutableSet~String~ parentShas
        +MutableSet~String~ childShas
    }

    class Signature {
        +DeveloperId developerId
        +LocalDateTime timestamp
    }

    class Branch {
        +String name
        +String fullName
        +ReferenceCategory category
        +RepositoryId repositoryId
        +String headSha
        +MutableSet~FileId~ fileIds
    }

    class Developer {
        +String name
        +String email
        +RepositoryId repositoryId
        +MutableSet~String~ committedCommitShas
        +MutableSet~String~ authoredCommitShas
        +String gitSignature
    }

    class ReferenceCategory {
        <<enumeration>>
        LOCAL_BRANCH
        REMOTE_BRANCH
        TAG
        NOTE
        PSEUDO_REF
        UNKNOWN
        MAIN_PSEUDO_REF
        MAIN_REF
        LINKED_PSEUDO_REF
        LINKED_REF
        BISECT
        REWRITTEN
        WORKTREE_PRIVATE
    }

    class Stats {
        +Long additions
        +Long deletions
        +StatsKind kind
    }

    class Remote {
        +String name
        +String url
        +RepositoryId repositoryId
    }

    class File {
        +String path
    }

    class Revision {
        +String content
        +CommitId commitId
        +FileId fileId
    }

    AbstractDomainObject <|-- Repository
    AbstractDomainObject <|-- Commit
    AbstractDomainObject <|-- Remote
    AbstractDomainObject <|-- File
    AbstractDomainObject <|-- Revision
    
    AbstractDomainObject <|-- Stakeholder
    Stakeholder <|-- Developer

    AbstractDomainObject <|-- Reference
    Reference <|-- Branch

    Repository "1" -- "*" Commit : owns (via ID)
    Repository "1" -- "*" Branch : owns (via ID)
    Repository "1" -- "*" Developer : involves (via ID)
    Repository "1" -- "*" Remote : references (via ID)

    Commit "1" *-- "0..1" Stats : describes
    Commit "1" -- "1" Signature : author
    Commit "1" -- "0..1" Signature : committer
    Signature "*" -- "1" Developer : identifies (via ID)

    Commit "0..*" -- "0..*" Commit : parent/child (via SHA)
    Commit "1" -- "*" Revision : records (via ID)
    Branch "*" -- "1" Commit : head (via SHA)
    
    Branch "1" -- "*" File : tracks (via ID)
    File "1" -- "*" Revision : has (via ID)
